--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/jpg" href="./public/todo-list_icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>ToDo List</title>
   </head>
   <body>
     <div id="root"></div>
